# synonyms-cli

./: Cargo.toml  README.md
src/: configuration.rs  domain.rs  main.rs  request_handling.rs
