[package]
name = "synonyms-cli"
description = "Get synonyms using the https://thesaurus.altervista.org API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "synonyms"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "3.1", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
directories = "4"
dialoguer = "0.10"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
once_cell = "1.7"
itertools = "0.10"
prettytable-rs = "0.8"
termion = "1.5"
ansi_term = "0.12"

[dev-dependencies]
claim = "0.5"

